--- a/css/main.scss
+++ b/css/main.scss
@@ -63,7 +63,7 @@ $on-laptop:        800px !default;
 
 .float-right-figure {
   float: right;
-  margin: 0 0 1rem 1.25rem; /* left margin creates the gap from text */
+  margin: 0.75rem 0 1rem 1.25rem; /* left margin creates the gap from text */
   max-width: 50%;
 }
 
