--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1727,6 +1727,11 @@ section,
   display: none !important;
 }
 
+#speakers .member .member-info {
+  display: none !important;
+}
+
+
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
