--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1887,6 +1887,11 @@ section,
   margin-left: auto;
   margin-right: auto;
 }
+
+/* Lift hero background image up */
+.hero img {
+  object-position: 50% 40%; /* 0% = top, 50% = center */
+}
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
