--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1892,6 +1892,11 @@ section,
 .hero img {
   object-position: 50% 40%; /* 0% = top, 50% = center */
 }
+
+.hero > img {
+  object-fit: cover;
+  object-position: 50% 40% !important;
+}
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
